# Melody

./: .gitignore  CMakeLists.txt  Melody.pro  README.md  listwidgetlocal.cpp  listwidgetlocal.h  melody_db.sql  music.cpp  music.h  musiceditdialog.cpp  musiceditdialog.h  musiceditdialog.ui  myplaylist.cpp  myplaylist.h  playlist.h  res.qrc  showitem.cpp  showitem.h  showitem.ui  showplaylistitem.cpp  showplaylistitem.h  showplaylistitem.ui  showplaylistmusicitem.cpp  showplaylistmusicitem.h  showplaylistmusicitem.ui  showtableitem.cpp  showtableitem.h  showtableitem.ui  usemysql.cpp  usemysql.h  usenetwork.cpp  usenetwork.h  usesqlite.cpp  usesqlite.h  widget.cpp  widget.h  widget.ui
db/: melody_db.sql
dlls/openssl-1.1.1w-win64/: readme.txt
